# urbit-lfs-filehosting

./: .gitignore  CHANGELOG.md  README.md  makefile
client-ui/: Cargo.toml
client-ui/src/: main.rs
client-ui/templates/: index.html.tera  manage.html.tera
data/: client-tech.md  client.md  debugging.md  design.md  provider.md  replace_strings.py  restore-backups.sh  update.sh
fileserver/: Cargo.toml
fileserver/src/: cors.rs  main.rs
gall-app/: desk.bill  desk.docket-0  desk.ship
gall-app/app/: lfs-client.hoon  lfs-provider.hoon  minimal-app.hoon
gall-app/app/filemanager/: index.html
gall-app/lib/: lfs-utils.hoon  parse.hoon
gall-app/mar/lfs-client/: action.hoon
gall-app/mar/lfs-provider/: command.hoon
gall-app/sur/: lfs-client.hoon  lfs-provider.hoon
gall-app/ted/: lfs-client-action.hoon  lfs-upload-url.hoon
gall-app/ted/lfs/: client-action.hoon  provider-command.hoon
html-glob/: index.html
src/app/: lfs-client.hoon  lfs-provider.hoon  lfs.hoon  workflow.hoon
src/mar/lfs/: action.hoon
src/mar/lfs-client/: action.hoon
src/mar/lfs-provider/: action.hoon  request-response.hoon  server-update.hoon
src/sur/: lfs-client.hoon  lfs-provider.hoon  lfs.hoon
src/ted/: lfs-upload-url.hoon
webserver/: Cargo.toml
webserver/src/: main.rs
