[package]
name = "urbit-lfs-webserver"
version = "0.1.0"
authors = ["Karl <37496339+aquarial@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rand = "0.8.3"
async-lock = "2.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }